prune CI jobs for the investigation